# AOC

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
day1/: task1.py
day2/: input.txt  task1.py
day3/: CMakeLists.txt  main.cpp
day4/: task.py  task1.py
day5/: CMakeLists.txt  main.cpp
day6/: task.py
day7/: task.py
